# StudioX

./: CMakeLists.txt  LICENSE  README.md
src/: gui.cpp  gui.h  main.cpp
src/commands/: AddTrackCommand.hpp  Command.hpp  DeleteClipCommand.hpp
src/core/: Application.cpp  Application.hpp
src/engine/: AudioEngine.hpp  AudioGraph.hpp  Node.hpp  PluginNode.hpp  TrackNode.hpp
src/project/: AutomationLane.hpp  Clip.hpp  Project.hpp  Track.hpp
src/services/: PluginService.hpp  TrackService.hpp  TransportService.hpp
src/state/: AppState.hpp
src/ui/: InspectorView.hpp  MainWindowView.hpp  MixerView.hpp  TimelineView.hpp  UIManager.hpp  View.hpp
